bs5 css: rename(remove) .ml-* and .mr-* to .ms-* and .me-*.

--- a/templates/bookingoption_dates_custom_list_items.mustache
+++ b/templates/bookingoption_dates_custom_list_items.mustache
@@ -44,6 +44,6 @@ To eliminate it <li> tag has to be moved to the parent template
     <span class="datepills text-white small py-1 px-4 bg-primary">
         {{string}}
     </span>
-    <i class="fa fa-trash ml-2 icon-red" data-action="delete" data-targetid="{{dateid}}"></i>
+    <i class="fa fa-trash ms-2 icon-red" data-action="delete" data-targetid="{{dateid}}"></i>
 </li>
 {{/dates}}
