--- a/templates/bookingoption_description_view.mustache
+++ b/templates/bookingoption_description_view.mustache
@@ -134,7 +134,7 @@
             <!-- Left Button -->
             <span class="spanhidemobile">
             {{#returnurl}}
-                <a href="{{returnurl}}" role="button" class="btn mr-auto d-flex justify-content-start align-items-center">
+                <a href="{{returnurl}}" role="button" class="btn me-auto d-flex justify-content-start align-items-center">
                     <i class="fa-solid fa-arrow-left smallericon" style="margin-right: 8px"></i>
                     {{#str}} back, mod_booking {{/str}}
                 </a>
@@ -142,7 +142,7 @@
             </span>
             <!-- Right Button -->
             {{#editurl}}
-                <a href="{{editurl}}" role="button" class="btn btn-light ml-auto">
+                <a href="{{editurl}}" role="button" class="btn btn-light ms-auto">
                     <i class="fa-solid fa-pen smallericon" style="margin-right: 8px"></i>
                     {{#str}} edit {{/str}}
                 </a>
