--- a/templates/report/option.mustache
+++ b/templates/report/option.mustache
@@ -33,7 +33,7 @@
     }
 }}
 <!-- TODO: New "mini navigation" in collapsible for all report2 links! -->
-<div class="mod-booking-report-option ml-3">
+<div class="mod-booking-report-option ms-3">
 	<div>
 		<div class="h6 mb-1">
 			<a href="{{report2option}}" title="Report for {{text}}" target="_blank">
@@ -43,7 +43,7 @@
 			<a href="{{optionlink}}" title="{{text}}" target="_blank">
 				<i class="fa fa-external-link" aria-hidden="true"></i>
 			</a>
-			<span class="ml-1">
+			<span class="ms-1">
 				<a class="btn btn-link btn-sm" data-toggle="collapse" data-bs-toggle="collapse" href="#collapseoptionshortinfo-{{id}}"
 				role="button" aria-expanded="false" aria-controls="collapseoptionshortinfo-{{id}}">
 				<i class="fa fa-chevron-down" aria-hidden="true"></i>
