--- a/templates/table_cards_container.mustache
+++ b/templates/table_cards_container.mustache
@@ -89,14 +89,14 @@
           }}{{#showfilterbutton}} wunderbyte_table_filter_on{{/showfilterbutton}}{{!
           }}{{#filterdeactivated}} inactivefilter{{/filterdeactivated}}{{!
           }}{{#nofilteratall}} nofilter{{/nofilteratall}} mt-2 px-2">
-          <div class="container-fluid ml-0">
+          <div class="container-fluid ms-0">
                <div class="row mb-2">
                     <div>
                          {{> local_wunderbyte_table/component_toggle }}
                          {{> local_wunderbyte_table/component_reload }}
                          {{> local_wunderbyte_table/component_edit }}
                     </div>
-                    <div class="ml-auto">
+                    <div class="ms-auto">
                          {{> local_wunderbyte_table/component_switchtemplates }}
                          {{> local_wunderbyte_table/component_sort }}
                          {{> local_wunderbyte_table/component_search }}
@@ -128,7 +128,7 @@
                </div>
           </div>
           {{#showdownloadbuttonatbottom}}
-          <div class="ml-2">
+          <div class="ms-2">
                {{> local_wunderbyte_table/component_print }}
           </div>
           {{/showdownloadbuttonatbottom}}
