--- a/templates/table_cards_row.mustache
+++ b/templates/table_cards_row.mustache
@@ -135,7 +135,7 @@ style="max-width: 25rem;"
         </div>
       {{/value}}
     {{/cardimage}}
-    <div class="{{cardbodyclass}} mt-2 ml-2 mr-2 p-2">
+    <div class="{{cardbodyclass}} mt-2 ms-2 me-2 p-2">
       {{#cardbody}}
         {{#columnclass}}<div class="{{.}}{{#key}} {{key}}{{/key}}">{{/columnclass}}
               <span {{^value}} style="display:none" {{/value}}>
@@ -164,7 +164,7 @@ style="max-width: 25rem;"
         {{#columnclass}}</div>{{/columnclass}}
       {{/cardbody}}
     </div>
-    <div class="mt-2 ml-3 mr-3">
+    <div class="mt-2 ms-3 me-3">
       <div class="{{cardlistclass}}">
         <ul class="infolist">
         {{#cardlist}}
