--- a/templates/table_list_row.mustache
+++ b/templates/table_list_row.mustache
@@ -119,14 +119,14 @@
 {{#showheaderimagelefthalf}}
 <div class="imagelefthalfcard card rounded-0
   pl-0 pr-3 pt-0 pb-0
-  sk-fade ml-0 mr-0 mb-3
+  sk-fade ms-0 me-0 mb-3
   flex-md-row align-items-center row gx-0" {{#datafields}} data-{{key}}="{{value}}" {{/datafields}}>
 {{/showheaderimagelefthalf}}
 {{^showheaderimagelefthalf}}
 <div class="card border
   rounded
   pl-0 pr-3 pt-0 pb-0
-  sk-fade ml-0 mr-0 mb-3
+  sk-fade ms-0 me-0 mb-3
   flex-md-row align-items-center row gx-0" {{#datafields}} data-{{key}}="{{value}}" {{/datafields}}>
 {{/showheaderimagelefthalf}}
   <div class="content w-100">
@@ -166,7 +166,7 @@
           {{/value}}
         </div>
         <div class="col-md-6">
-          <div class="row ml-1 mr-1 mt-5 mb-3 d-flex">
+          <div class="row ms-1 me-1 mt-5 mb-3 d-flex">
         {{/headerimage}}
       {{/showheaderimagelefthalf}}
       {{#showheaderimageright}}
@@ -241,7 +241,7 @@
           </div>
         </div>
         {{^showheaderimagelefthalf}}<div class="col-md-3">{{/showheaderimagelefthalf}}
-        {{#showheaderimagelefthalf}}<div class="showheaderimagelefthalf-buttoncontent ml-auto">{{/showheaderimagelefthalf}}
+        {{#showheaderimagelefthalf}}<div class="showheaderimagelefthalf-buttoncontent ms-auto">{{/showheaderimagelefthalf}}
           <div class="h-100 d-flex" style=" justify-content: flex-end;
           flex-direction: column;">
           {{#rightside}}
