--- a/templates/view.mustache
+++ b/templates/view.mustache
@@ -45,7 +45,7 @@
 <ul class="nav nav-tabs" id="nav-tabs-booking-options-view" role="tablist">
   {{^elective}}
     {{#showonlyone}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link active" id="showonlyone-tab"
           data-toggle="pill" data-target="#showonlyone"
           data-bs-toggle="pill" data-bs-target="#showonlyone"
@@ -55,7 +55,7 @@
       </li>
     {{/showonlyone}}
     {{#whatsnewtable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#showwhatsnew}}active{{/showwhatsnew}}" id="whatsnew-tab"
           data-toggle="pill" data-target="#whatsnew"
           data-bs-toggle="pill" data-bs-target="#whatsnew"
@@ -65,7 +65,7 @@
       </li>
     {{/whatsnewtable}}
     {{#alloptionstable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#showall}}active{{/showall}}" id="all-options-tab"
           data-toggle="pill" data-target="#all-options"
           data-bs-toggle="pill" data-bs-target="#all-options"
@@ -75,7 +75,7 @@
       </li>
     {{/alloptionstable}}
     {{#activeoptionstable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#showactive}}active{{/showactive}}" id="active-options-tab"
           data-toggle="pill" data-target="#active-options"
           data-bs-toggle="pill" data-bs-target="#active-options"
@@ -85,7 +85,7 @@
       </li>
     {{/activeoptionstable}}
     {{#myoptionstable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#mybooking}}active{{/mybooking}}" id="my-options-tab"
           data-toggle="pill" data-target="#my-options"
           data-bs-toggle="pill" data-bs-target="#my-options"
@@ -95,7 +95,7 @@
       </li>
     {{/myoptionstable}}
     {{#optionsiteachtable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#myoptions}}active{{/myoptions}}" id="options-i-teach-tab"
           data-toggle="pill" data-target="#options-i-teach"
           data-bs-toggle="pill" data-bs-target="#options-i-teach"
@@ -105,7 +105,7 @@
       </li>
     {{/optionsiteachtable}}
     {{#responsiblecontacttable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#optionsiamresponsiblefor}}active{{/optionsiamresponsiblefor}}" id="options-i-am-responsible-for-tab"
           data-toggle="pill" data-target="#options-i-am-responsible-for"
           data-bs-toggle="pill" data-bs-target="#options-i-am-responsible-for"
@@ -115,7 +115,7 @@
       </li>
     {{/responsiblecontacttable}}
     {{#myinstitutiontable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#myinstitution}}active{{/myinstitution}}" id="myinstitution-tab"
           data-toggle="pill" data-target="#myinstitution"
           data-bs-toggle="pill" data-bs-target="#myinstitution"
@@ -125,7 +125,7 @@
       </li>
     {{/myinstitutiontable}}
     {{#visibleoptionstable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#visibleoptions}}active{{/visibleoptions}}" id="visibleoptions-tab"
           data-toggle="pill" data-target="#visibleoptions"
           data-bs-toggle="pill" data-bs-target="#visibleoptions"
@@ -135,7 +135,7 @@
       </li>
     {{/visibleoptionstable}}
     {{#invisibleoptionstable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#invisibleoptions}}active{{/invisibleoptions}}" id="invisibleoptions-tab"
           data-toggle="pill" data-target="#invisibleoptions"
           data-bs-toggle="pill" data-bs-target="#invisibleoptions"
@@ -145,7 +145,7 @@
       </li>
     {{/invisibleoptionstable}}
     {{#fieldofstudytable}}
-      <li class="nav-item mr-1" role="presentation">
+      <li class="nav-item me-1" role="presentation">
         <button class="nav-link {{#showfieldofstudy}}active{{/showfieldofstudy}}" id="showfieldofstudy-tab"
           data-toggle="pill" data-target="#showfieldofstudy"
           data-bs-toggle="pill" data-bs-target="#showfieldofstudy"
@@ -156,7 +156,7 @@
     {{/fieldofstudytable}}
   {{/elective}}
   {{#elective}}
-    <li class="nav-item mr-1" role="presentation">
+    <li class="nav-item me-1" role="presentation">
       <button class="nav-link {{#elective}}active{{/elective}}" id="elective-tab"
         data-toggle="pill" data-target="#elective"
         data-bs-toggle="pill" data-bs-target="#elective"
