--- a/templates/col_price.mustache
+++ b/templates/col_price.mustache
@@ -50,7 +50,7 @@
     {{#showbutton}}
         <a href="/login/index.php" class="btn btn-{{buttonstyle}}">{{#str}}bocondisloggedinnotavailable, mod_booking{{/str}}</a>
     {{/showbutton}}
-    <div class="allprices ml-5 mt-3">
+    <div class="allprices ms-5 mt-3">
     {{#priceitems}}
         <div class="pricecurrency"> {{price}} {{currency}} <i>{{pricecategoryname}}</i></div>
     {{/priceitems}}
