bs5 css: remove deprecated float-right classes

--- a/templates/bookingoption_description.mustache
+++ b/templates/bookingoption_description.mustache
@@ -137,7 +137,7 @@
     }
 }}
 {{#booknowbutton}}
-    <div class="float-right float-end">
+    <div class="float-end">
         <div>
             {{{.}}}
         </div>
