--- a/templates/bookingoption_description_event.mustache
+++ b/templates/bookingoption_description_event.mustache
@@ -52,7 +52,7 @@
     }
 }}
 {{#booknowbutton}}
-    <div class="float-right float-end">
+    <div class="float-end">
         <div>
             {{{.}}}
         </div>
