bs5 css: renamed .pl-* and .pr-* to .ps-* and .pe-*.

--- a/templates/bookingoption_description_dates.mustache
+++ b/templates/bookingoption_description_dates.mustache
@@ -42,7 +42,7 @@
     <a class="collapseoptiondatesbutton" data-toggle="collapse" data-bs-toggle="collapse" href="#collapseoptiondates" role="button" aria-expanded="false" aria-controls="collapseoptiondates">
         <i class="fa fa-calendar" aria-hidden="true"></i>&nbsp;{{#str}} dates, mod_booking {{/str}}...
     </a>
-    <div id="collapseoptiondates" class="show list-group-item border-0 pl-0 pr-0">
+    <div id="collapseoptiondates" class="show list-group-item border-0 ps-0 pe-0">
         <div class="list-group">
             {{#dates}}
                 <div class="list-group-item">
