--- a/templates/table_cards_row.mustache
+++ b/templates/table_cards_row.mustache
@@ -64,37 +64,37 @@
       "footer": {
         "bookings": {
           "columnkeyclass": "d-none",
-          "columnclass": "text-left text-gray pr-2 font-size-sm",
+          "columnclass": "text-left text-gray pe-2 font-size-sm",
           "columniclassbefore": "fa fa-ticket fa-fw text-gray font-size-sm"
         },
         "minanswers": {
           "columnkeyclass": "d-none",
-          "columnclass": "text-left text-gray pr-2 font-size-sm",
+          "columnclass": "text-left text-gray pe-2 font-size-sm",
           "columniclassbefore": "fa fa-arrow-up fa-fw text-gray font-size-sm"
         },
         "dayofweektime": {
           "columnkeyclass": "d-none",
-          "columnclass": "text-left text-gray pr-2 font-size-sm",
+          "columnclass": "text-left text-gray pe-2 font-size-sm",
           "columniclassbefore": "fa fa-clock-o fa-fw text-gray font-size-sm"
         },
         "location": {
           "columnkeyclass": "d-none",
-          "columnclass": "text-left text-gray  pr-2 font-size-sm",
+          "columnclass": "text-left text-gray  pe-2 font-size-sm",
           "columniclassbefore": "fa fa-map-marker fa-fw text-gray font-size-sm"
         },
         "institution": {
           "columnkeyclass": "d-none",
-          "columnclass": "text-left text-gray  pr-2 font-size-sm",
+          "columnclass": "text-left text-gray  pe-2 font-size-sm",
           "columniclassbefore": "fa fa-building-o fa-fw text-gray font-size-sm"
         },
         "responsiblecontact": {
           "columnkeyclass": "d-none",
-          "columnclass": "text-left text-gray  pr-2 font-size-sm",
+          "columnclass": "text-left text-gray  pe-2 font-size-sm",
           "columniclassbefore": "fa fa-user fa-fw text-gray font-size-sm"
         },
         "showdates": {
           "columnkeyclass": "d-none",
-          "columnclass": "text-left pr-2 text-gray font-size-sm"
+          "columnclass": "text-left pe-2 text-gray font-size-sm"
         },
         "comments": {
           "columnkeyclass": "d-none"
