Improvement: Add checklist setting #1268

--- a/templates/bookingoption_description_view.mustache
+++ b/templates/bookingoption_description_view.mustache
@@ -300,12 +300,12 @@
                         {{/subpluginstemplatedata}}
                 </div>
             </div>
-            {{#showdownloadcheckbox}}
-            <a href="{{{showdownloadcheckbox}}}" 
-            class="btn btn-primary" role="button">
+            {{#showchecklistdownloadbutton}}
+            <a href="{{{showchecklistdownloadbutton}}}" 
+            class="btn btn-primary mt-3" role="button">
             <i class="fa fa-download fa-fw" aria-hidden="true"></i>&nbsp;{{#str}}checklistdownload, mod_booking{{/str}}
             </a>
-            {{/showdownloadcheckbox}}
+            {{/showchecklistdownloadbutton}}
         </div>
         {{#competencyheader}}
             <details class="competency">
