GH-861: Improvement: Display notes on hover

--- a/templates/performance/performance_history.mustache
+++ b/templates/performance/performance_history.mustache
@@ -30,8 +30,9 @@
 {{! Put the chart data into the DOM as JSON (safe for JS to read) }}
 <script type="application/json" id="booking-performance-chart-data">
     {
-        "labels": {{{chart.labelsjson}}},
-        "datasets": {{{chart.datasetsjson}}}
+        "labelsjson": {{{chart.labelsjson}}},
+        "datasetsjson": {{{chart.datasetsjson}}},
+        "notesjson": {{{chart.notesjson}}}
     }
 </script>
 
