--- a/templates/performance/performance_sidebar.mustache
+++ b/templates/performance/performance_sidebar.mustache
@@ -24,14 +24,15 @@
     }
 }}
 <div class="sidebar" style="flex: 1; background: #f5f5f5; padding: 10px;">
-    <h4>Sidebar</h4>
+    <h4>{{#str}} performancesidebar, mod_booking {{/str}}</h4>
     <ul class="booking-sidebar-list">
         {{#sidebar}}
             {{{.}}}
         {{/sidebar}}
-
         {{^sidebar}}
-            <li>No sidebar entries available</li>
+            <li>
+            {#str}} performancesidebarempty, mod_booking {{/str}}
+            </li>
         {{/sidebar}}
     </ul>
 </div>
