Bugfix: Fixing spelling mistakes, linting

--- a/templates/performance/performance_sidebar.mustache
+++ b/templates/performance/performance_sidebar.mustache
@@ -31,7 +31,7 @@
         {{/sidebar}}
         {{^sidebar}}
             <li>
-            {#str}} performancesidebarempty, mod_booking {{/str}}
+            {{#str}} performancesidebarempty, mod_booking {{/str}}
             </li>
         {{/sidebar}}
     </ul>
